--- a/Rahtk.Shared/Localization/Resources/SharedResource.en.resx
+++ b/Rahtk.Shared/Localization/Resources/SharedResource.en.resx
@@ -93,6 +93,8 @@
     <data name="email_verification" xml:space="preserve">
         <value>Email verification.</value>
     </data>
-
+    <data name="product_created_successfully" xml:space="preserve">
+        <value>Product created successfully.</value>
+    </data>
 
 </root>
